tests/lean/bad_open.lean.expected.out
bad_open.lean:1:5: error: invalid 'open/export' command, identifier expected
